--- a/packages/scanner-core/Cargo.toml
+++ b/packages/scanner-core/Cargo.toml
@@ -10,6 +10,10 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2.92"
+wasmparser = "0.201.0"
+wasmprinter = "0.201.0"
+wast = "201.0.0"
+wat = "1.201.0"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.42"
