--- a/packages/scanner-core/Cargo.toml
+++ b/packages/scanner-core/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
+thiserror = "1.0.57"
 wasm-bindgen = "0.2.92"
 wasmparser = "0.201.0"
 wasmprinter = "0.201.0"
