--- a/packages/scanner-core/Cargo.toml
+++ b/packages/scanner-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "massa-sc-scanner-core"
-version = "0.0.1"
+version = "0.0.4"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,7 +9,12 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
+thiserror = "1.0.57"
 wasm-bindgen = "0.2.92"
+wasmparser = "0.201.0"
+wasmprinter = "0.201.0"
+wast = "201.0.0"
+wat = "1.201.0"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.42"
